Fix horizontal scrolling behavior

--- a/gerby/assets/scss/style.scss
+++ b/gerby/assets/scss/style.scss
@@ -18,7 +18,7 @@ html {
   font-size: #{$size}px;
   overflow-x: hidden;
   overflow-y: scroll;
-  overscroll-behavior: none;
+  overscroll-behavior-y: none;
 }
 
 body {
